<resources>
    <string name="app_name">MegaConvertor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Physic">Physic measures</string>
    <string name="currencies">Currencies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="convert_button_text">Convert</string>
    <string name="input_hint">Input</string>
    <string name="length_textview_text">Length</string>
    <string name="to_text_view_text">To</string>
    <string name="pressure_text_view_text">Pressure</string>
    <string name="temperature_text_view_text">Temperature</string>
    <string name="result_edit_text_hint">Result</string>
    <string name="currency_textview_text">Currency</string>
    <string name="main_fragment_message">Last operations made were</string>
    <string name="history">History</string>
    <string name="main_fragment_exchange_rates">Latest Exchange Rates are</string>
</resources>
